[package]
name = "rust_sensitive"
version = "1.0.0"
authors = ["wqwqzzz <asd_sdw@outlook.com>"]
edition = "2021"
rust-version = "1.70"
description = "Sensitive word filtering, support multiple data source loading, multiple filtering algorithms, multiple operation functions"
readme = "README.md"
repository = "https://github.com/wqwqzzz/rust-sensitive"
license = "MIT"
keywords = ["sensitive"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
